# stock_analysis_app

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  advanced_demo.py  feature_analysis.py  feature_optimization_summary.py  pyproject.toml  requirements.txt  simple_feature_analysis.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/cache/: AAPL_data.parquet  AAPL_metadata.json
docs/: conf.py  index.rst  installation.rst
models/: linear_regression_features.pkl  linear_regression_model.pkl  linear_regression_scaler.pkl
src/data/cache/: MSFT_data.parquet  MSFT_info.json  MSFT_metadata.json  NVDA_data.parquet  NVDA_info.json  NVDA_metadata.json  TSLA_data.parquet  TSLA_info.json  TSLA_metadata.json
src/models/: linear_regression_model.pkl  random_forest_features.pkl  random_forest_model.pkl  random_forest_scaler.pkl
src/single_stock_analysis/: __init__.py  data_collector.py  data_manager.py  example.py  feature_eda.py  stock_analyzer.py  visualizer.py
src/single_stock_analysis/prediction/: __init__.py  predictor.py
src/single_stock_analysis/strategies/: momentum.py
src/stock_analysis_app/: __init__.py  cli.py
src/stock_analysis_app/models/: timeseries_models.py
src/streamlit_app/: Home.py
src/streamlit_app/config/: config.yaml  dev.yaml
src/streamlit_app/pages/: Advanced_Analysis.py  Predictions.py  Technical_Analysis.py
src/streamlit_app/utils/: config_manager.py  data_service.py  stock_utils.py
tests/test_single_stock_analysis/: test_data_manager.py
