[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis-app"
version = "1.0.0"
description = "A comprehensive stock analysis application with ML prediction capabilities"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Stock Analysis Team", email = "team@stockanalysis.com"},
]
maintainers = [
    {name = "Stock Analysis Team", email = "team@stockanalysis.com"},
]
keywords = ["stock-analysis", "machine-learning", "finance", "data-science", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "yfinance>=0.1.70",
    "scikit-learn>=0.24.2",
    "joblib>=1.1.0",
    "matplotlib>=3.4.2",
    "seaborn>=0.11.1",
    "statsmodels>=0.12.2",
    "ta>=0.7.0",
    "pytest>=6.2.5",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "beautifulsoup4>=4.9.3",
    "tensorflow>=2.6.0",
    "keras>=2.6.0",
    "streamlit>=1.24.0",
    "plotly>=5.13.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
test = [
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "pytest-mock>=3.7.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]
ml = [
    "xgboost>=1.6.0",
    "lightgbm>=3.3.0",
    "catboost>=1.0.0",
    "optuna>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/JustR3/stock_analysis_app"
Documentation = "https://stock-analysis-app.readthedocs.io/"
Repository = "https://github.com/JustR3/stock_analysis_app"
Issues = "https://github.com/JustR3/stock_analysis_app/issues"
Changelog = "https://github.com/JustR3/stock_analysis_app/blob/main/CHANGELOG.md"

[project.scripts]
stock-analysis = "stock_analysis_app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["stock_analysis_app*"]

[tool.setuptools.package-data]
"stock_analysis_app" = ["config/*.yaml", "data/*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["stock_analysis_app"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "plotly.*",
    "streamlit.*",
    "tensorflow.*",
    "keras.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --disable-warnings"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "ml: Machine learning tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
